crates/cli/tests/snapshots/project_env__project_env_returns_empty_output_for_no_mappings.snap
---
source: crates/cli/tests/project_env.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "",
    stderr: "",
}
